config/elastic-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: kube-logging
  labels:
    k8s-app: elasticsearch
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: elasticsearch
      version: v1
  template:
    metadata:
      labels:
        k8s-app: elasticsearch
        version: v1
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
        ports:
          - containerPort: 9200
        resources:
          limits:
            cpu: 500m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: kube-logging
  labels:
    k8s-app: elasticsearch
    version: v1
spec:
  type: NodePort
  selector:
    k8s-app: elasticsearch
  ports:
    - port: 9200
