config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chi-svc
spec:
  type: NodePort
  selector:
    app: chi-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
