config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chi-svc
            port:
              number: 3000
  - host: localhost
    http:
      paths:
        - path: /kibana
          pathType: Prefix
          backend:
            service:
              name: kibana
              port:
                number: 5601
